fixed spacing
fixed spacing issue between header and nav bar

--- a/dashboard assignment/styles.css
+++ b/dashboard assignment/styles.css
@@ -9,14 +9,16 @@ nav {
 	background-image: url("images/blue_bg.png");
     background-color: #134670;
     max-width: 100%;
-    height: 110px;
+	height: 110px;
 }
 
-
-li {
-	float: left;
+.navicons {
 	margin-left: auto;
 	margin-right: auto;
+}
+
+li{
+	float: left;
 }
 
 img.centered{
